# MoreInfo

./: .gitignore  Cargo.toml  LICENSE  README.md  SEARCH.md  TASK MANAGEMENT.md  claude.md  index.html  package-lock.json  package.json  vite.config.js
.cargo/: config.toml
.github/workflows/: release.yml
crates/front-matter/: Cargo.toml
crates/front-matter/src/: lib.rs
nimbalyst-local/mockups/: advanced-search-widget.mockup.html
src/: calcBlock.js  camelLinks.js  dateUtils.js  editor.js  input.css  main.js  prefs.js  style.css  taskFilter.js  tauri.js  ui.js  widgetDrag.js  widgetSystem.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/tests/: calcBlock.test.js  camelLinks.test.js  specialBlock.test.js  widget.test.js  widgetSystem.test.js
src/widgets/: AnnotationsWidget.js  BrowserWidget.js  CalendarWidget.js  CounterWidget.js  FavoritesWidget.js  MetadataWidget.js  OutlineWidget.js  PageWidget.js  ReferencesWidget.js  ScratchPadWidget.js  SearchWidget.js  TagsWidget.js  TasksWidget.js  Widget.js
