[package]
name = "more-info"
version = "0.1.0"
edition = "2021"

[lib]
name = "more_info_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-dialog       = "2"
tauri-plugin-window-state = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
pulldown-cmark    = "0.12"
front-matter      = { path = "../crates/front-matter" }
rusqlite          = { version = "0.32", features = ["bundled"] }
reqwest           = { version = "0.12", default-features = false, features = ["default-tls", "gzip"] }
