[package]
name = "more-info"
version = "0.8.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "MoreInfo"
path = "src/main.rs"

[lib]
name = "more_info_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-dialog       = "2"
tauri-plugin-process      = "2"
tauri-plugin-window-state = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
pulldown-cmark    = "0.12"
front-matter      = { path = "../crates/front-matter" }
rusqlite          = { version = "0.32", features = ["bundled"] }
reqwest           = { version = "0.12", default-features = false, features = ["default-tls", "gzip"] }
chrono            = { version = "0.4", default-features = false, features = ["clock"] }
font-kit          = { version = "0.13", default-features = false, features = ["source"] }
